@@ -11,6 +11,7 @@ Version 1.1.2 to be released
 - Bug #1021: Missing return in CAuthItem::removeChild (Sam Dark)
 - Bug #1035: RBAC BizRule security violation (Sam Dark)
 - Bug #1048: CAutoComplete conflicts with jQueryUI 1.8.x (Sam Dark)
+- Bug #1121: typo in CActiveRecord::setPrimaryKey() (Qiang)
 - Bug: Removed the debugging line in CActiveFinder that caused many-many relational query to fail if FKs are not defined (Qiang)
 - Bug: Fixed the bug that doing performance profiling while turning on YII_TRACE_LEVEL would throw exception (Qiang)
 - Bug: user was redirected to AJAX URLs after logging in (Sam Dark)
